# Literature-Mind

./: .gitignore  CLAUDE.md  LICENSE
litmind/: README.md  pyproject.toml
litmind/examples/: basic_usage.py
litmind/scripts/: analyze.py  cli.py  discussion.py  evidence.py  parse.py  review.py
litmind/src/litmind/: __init__.py  config.py
litmind/src/litmind_analyzer/: __init__.py  __main__.py  analyzer.py  cli.py  models.py  prompts.py  provider.py  validator.py
litmind/src/litmind_chat/: __init__.py  cache.py  cli.py  config.py  service.py
litmind/src/litmind_discussion/: __init__.py  cache.py  citation.py  collector.py  composer.py  config.py  models.py  parser.py  prompts.py  service.py
litmind/src/litmind_evidence/: __init__.py  aggregator.py  cache.py  config.py  evaluator.py  models.py  prompts.py  (+2 more)
litmind/tests/: conftest.py  test_analyzer_models.py  test_analyzer_pipeline.py  test_analyzer_validator.py  test_config.py  test_discussion_citation.py  test_discussion_collector.py  test_discussion_composer.py  test_discussion_models.py  test_discussion_parser.py  test_discussion_service.py  test_evidence_aggregator.py  test_evidence_cache.py  test_evidence_classifier.py  test_evidence_evaluator.py  test_evidence_models.py  test_evidence_retriever.py  test_integration.py  test_knowledge_base.py  test_parser.py  test_research_chat.py  test_review_composer.py  test_review_consensus.py  test_review_controversy.py  test_review_discovery.py  test_review_gaps.py  test_review_models.py  test_review_outline.py  test_review_service.py  test_review_trend.py
(+75 files in other folders)
